crates/reinhardt-pages/tests/ui/page_props/fail/missing_source.rs
use reinhardt_pages::page_props;

#[page_props]
struct UserPageProps {
	id: i64,
}

fn main() {}
